[gd_scene load_steps=6 format=3 uid="uid://crfktawxuc3xh"]

[ext_resource type="Script" path="res://prog_54c.gd" id="1_8tewv"]
[ext_resource type="Theme" uid="uid://dvogokap6qe1c" path="res://LargeFont.tres" id="2_c2hht"]

[sub_resource type="LabelSettings" id="LabelSettings_pt3vv"]
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_wwx5d"]
font_size = 60
font_color = Color(0, 1, 1, 1)
outline_size = 12
shadow_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_wsbkj"]
font_size = 60
font_color = Color(1, 0, 1, 1)
outline_size = 8

[node name="prog54c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8tewv")

[node name="Enter" type="Label" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 58.0
offset_right = 559.0
offset_bottom = 141.0
text = "Enter Radius Here:"
label_settings = SubResource("LabelSettings_pt3vv")

[node name="txtRadius" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 578.0
offset_top = 60.0
offset_right = 823.0
offset_bottom = 150.0

[node name="lblArea" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 208.0
offset_right = 782.0
offset_bottom = 291.0
text = "Area:"
label_settings = SubResource("LabelSettings_wwx5d")

[node name="lblCirc" type="Label" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 312.0
offset_right = 778.0
offset_bottom = 395.0
text = "Circumference:"
label_settings = SubResource("LabelSettings_wsbkj")

[node name="btnCalc" type="Button" parent="lblCirc"]
layout_mode = 0
offset_left = -25.0
offset_top = 203.0
offset_right = 345.0
offset_bottom = 302.0
theme = ExtResource("2_c2hht")
text = "Calculate"

[node name="btnClear" type="Button" parent="lblCirc"]
layout_mode = 0
offset_left = 392.0
offset_top = 205.0
offset_right = 762.0
offset_bottom = 309.0
theme = ExtResource("2_c2hht")
text = "Clear"

[node name="btnExit" type="Button" parent="lblCirc"]
layout_mode = 0
offset_left = 914.0
offset_top = 205.0
offset_right = 1090.0
offset_bottom = 309.0
theme = ExtResource("2_c2hht")
text = "Exit
"

[connection signal="pressed" from="lblCirc/btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="lblCirc/btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="lblCirc/btnExit" to="." method="_on_btn_exit_pressed"]
